--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,11 +15,19 @@
   src: local('Cabin Bold'), local('Cabin-Bold'), url(https://fonts.gstatic.com/s/cabin/v12/82B-3YlzWJm8zbCrVEmc_vesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
+/* Colors List
+#e8e9e7 instead of white
+#453a3f  fonts and button
+#cccccc background color of container
+#823126 color for button transition
+ */
+ 
 /* General Style*/
 html {
   font-size: 16px;
   font-family: 'Cabin';
   color: #453a3f;
+  background-color: #e8e9e7;
 }
 .container {
   display: flex;
@@ -58,10 +66,10 @@ header {
   justify-content: space-between;
   height: 4rem;
   align-items: center;
-  background-color: white;
   position: fixed;
   z-index: 2;
   width: 100%;
+  background-color: #e8e9e7;
 }
 
 .logo {
@@ -91,7 +99,7 @@ header nav span {
 
 /* Style of First Container  */
 .first {
-  background-color: lightgrey;
+  background-color: #cccccc;
   padding-top: 4rem;
 }
 
@@ -105,7 +113,7 @@ header nav span {
 /*  width: 100%;*/
   padding: 1rem 0;
   background-color: #453a3f;
-  color: white;
+  color: #e8e9e7;
   text-align: center;
   border-radius: 0.2rem;
 }
@@ -135,7 +143,7 @@ header nav span {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: solid #e9ecec 1px;
+  border: solid #cccccc 1px;
   margin: 0.5px;
 }
 .classesInfo a {
@@ -154,12 +162,12 @@ header nav span {
   width: 65%;
 }
 .guest {
-  background-color: lightgrey;
+  background-color: #cccccc;
 }
 
 /* Style of Third Container*/
 .third {
-  background-color: lightgrey;
+  background-color: #cccccc;
   flex-direction: column;
   padding-bottom: 1rem;
 }
@@ -177,7 +185,7 @@ header nav span {
 }
 .learningBlock {
   margin: 1rem;
-  background-color: white;
+  background-color: #e8e9e7;
 }
 .learningInfo {
   padding: 1rem 1rem 1.5rem 1rem;
@@ -202,7 +210,7 @@ video {
   width: 100%;
 }
 .fisma {
-  background-color: lightgrey;
+  background-color: #cccccc;
 }
 .underVideo {
   margin-top: 1.5rem;
@@ -211,7 +219,7 @@ video {
 footer {
   display: flex;
   justify-content: space-between;
-  border-top: solid #e9ecec 1px;
+  border-top: solid #cccccc 1px;
   height: 5rem;
 }
 .copyright, footer nav {
@@ -238,7 +246,7 @@ footer {
   }
   html {
     text-align: center;
-    background-color: white;
+    background-color: #e8e9e7;
   }
   header nav {
     display: flex;
@@ -284,7 +292,7 @@ footer {
     width: 100%;
   }
   .guest {
-    background-color: white;
+    background-color: #e8e9e7;
   }
 
   .classesInfo {
@@ -311,7 +319,7 @@ footer {
   }
   .startLearning, .thesis {
     width: 100%;
-    border-top: solid #e9ecec 1px;
+    border-top: solid #cccccc 1px;
   }
   .thesis {
     padding: 0;
@@ -322,13 +330,13 @@ footer {
     padding-bottom: 1.4rem;
   }
   .third {
-    background-color: white;
+    background-color: #e8e9e7;
   }
   .learning {
     width: 95%;
   }
   .learningBlock {
-    background-color: lightgrey;
+    background-color: #cccccc;
     width: 95%;
   }
   .learningBlock h3{
